Updated incident desc

--- a/Common/Languages/English/Keyed/KenshiFauna_Keys.xml
+++ b/Common/Languages/English/Keyed/KenshiFauna_Keys.xml
@@ -2,6 +2,6 @@
 <LanguageData>
 
 	<LetterLabelLeviathanPasses>leviathan wanders into the area</LetterLabelLeviathanPasses>
-	<LetterLeviathanPasses>Leviathans have wandered into the area.\n\nTaming one of those gentle titans would gain your colony a strong and tenacious pack animal.\n\nThey will leave in a few days.</LetterLeviathanPasses>
+	<LetterLeviathanPasses>Leviathans have wandered into the area.\n\nYou can try hunting those gentle titans for their valuable pearls, or tame them to gain your colony a strong and tenacious pack animal.\n\nThey will leave in a few days.</LetterLeviathanPasses>
 
 </LanguageData>
